api build and app rebuild
